# pomodoro-bot

./: .env.dist  .gitignore  README.md  build.sh  config.toml  config.toml.example  package-lock.json  pyproject.toml  setup.sh  system_prompt.md
.github/workflows/: release.yml
_bmad-output/: project-context.md
_bmad-output/implementation-artifacts/: 1-1-contracts-layer-consolidation.md  1-2-configuration-boundary-enforcement.md  1-3-llm-module-boundaries-module-naming-corrections.md  1-4-frozen-value-objects-structural-pattern-matching-dispatch.md  1-5-hardware-free-test-suite-verification.md  2-1-pipelinemetrics-typed-dataclass-structured-json-log-emission.md  (+12 more)
docs/: architecture.md  deployment-guide.md  development-guide.md  index.md  pi5-verification-runbook.md  project-overview.md  project-scan-report.json  source-tree-analysis.md
prompts/: system_prompt.md  system_prompt_qwen2.md  system_prompt_qwen3 copy.md  system_prompt_qwen3.md  system_prompt_v2.md  system_prompt_v3.md  system_prompt_v4.md  system_prompt_v5.md  system_prompt_v6.md
scripts/: pi5_build_optimized_inference.sh  pi5_cpu_tuning.sh  pi5_model_sweep.py  start-pomo.sh
src/: app_config.py  app_config_parser.py  app_config_schema.py  audio-diagnostic.py  main.py  spoken_time.py  tool_contract.py
tests/: README.md  test_main_startup.py
training/: .gitignore  README.md  __init__.py  build_review_queue.py  common.py  finalize_dataset.py  generate_dataset.py  noise.py  report_dataset.py  teacher.py  templates.py  validate_dataset.py
web_ui/: README.md  app.js  index.html  styles.css
(+194 files in other folders)
